spread site to many interestas

--- a/fishing.html
+++ b/fishing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWorld</title>
+    <title>MyWorld - fishing</title>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
 
           <nav class="nav">
             <ul class="list nav__list">
-              <li><a class="nav__link" href="./fishing.html">Fishing</a></li>
+              <li><a class="nav__link current" href="">Fishing</a></li>
               <li>
                 <a class="nav__link" href="./minecraft.html">Minecraft</a>
               </li>
@@ -41,7 +41,30 @@
       <main class="main">
         <section class="section hero">
           <div class="container">
-            <h1 class="hero__title">Home page</h1>
+            <h1 class="hero__title">Everything about fishing</h1>
+          </div>
+        </section>
+
+        <section class="section guide">
+          <div class="container">
+            <h2>Okrąg mazowiecki przepisy</h2>
+
+            <ul class="guide__list list">
+              <li>
+                <img
+                  src="./assets/images/rules-1pg.jpg"
+                  alt="Rules page 1"
+                  width="300"
+                />
+              </li>
+              <li>
+                <img
+                  src="./assets/images/rules-2pg.jpg"
+                  alt="Rules page 2"
+                  width="300"
+                />
+              </li>
+            </ul>
           </div>
         </section>
       </main>
