--- a/dance.html
+++ b/dance.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWorld</title>
+    <title>MyWorld - minecraft</title>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -22,7 +22,9 @@
               <li>
                 <a class="nav__link" href="./minecraft.html">Minecraft</a>
               </li>
-              <li><a class="nav__link" href="./dance.html">Dance</a></li>
+              <li>
+                <a class="nav__link current" href="./dance.html">Dance</a>
+              </li>
             </ul>
           </nav>
 
@@ -41,7 +43,13 @@
       <main class="main">
         <section class="section hero">
           <div class="container">
-            <h1 class="hero__title">Home page</h1>
+            <h1 class="hero__title">Dance</h1>
+          </div>
+        </section>
+
+        <section class="section">
+          <div class="container">
+            <h2>Test</h2>
           </div>
         </section>
       </main>
