--- a/minecraft.html
+++ b/minecraft.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWorld</title>
+    <title>MyWorld - minecraft</title>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -19,9 +19,7 @@
           <nav class="nav">
             <ul class="list nav__list">
               <li><a class="nav__link" href="./fishing.html">Fishing</a></li>
-              <li>
-                <a class="nav__link" href="./minecraft.html">Minecraft</a>
-              </li>
+              <li><a class="nav__link current" href="">Minecraft</a></li>
               <li><a class="nav__link" href="./dance.html">Dance</a></li>
             </ul>
           </nav>
@@ -41,7 +39,17 @@
       <main class="main">
         <section class="section hero">
           <div class="container">
-            <h1 class="hero__title">Home page</h1>
+            <h1 class="hero__title">Minecraft</h1>
+          </div>
+        </section>
+
+        <section class="section">
+          <div class="container">
+            <a
+              target="_blank"
+              href="https://www.youtube.com/watch?v=8e169V6Tf68"
+              >5 способов заработать деньги на сервере funtime майнкрафт</a
+            >
           </div>
         </section>
       </main>
